// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button click event 1`] = `
<Button
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconStyle=""
  id={null}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Button control 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconStyle=""
  id={null}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Button__ButtonView
    className="ui-button test-class ripple"
    handlers={
      Object {
        "kbActivate": [Function],
      }
    }
    hidden={false}
    id="Button-0"
    keyMap={
      Object {
        "kbActivate": "",
      }
    }
    onClick={[Function]}
    sizing="normal"
    style={Object {}}
  >
    <Button__StyledIcon
      className=""
      disabled={false}
      iconName="bomb"
      sizing="normal"
    />
  </Button__ButtonView>
</Wrapper>
`;

exports[`Test creation of a Button control with custom icon, colors, and border 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  iconName="superpowers"
  iconStyle=""
  id={null}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  ripple={true}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "black",
      "borderColor": "green",
      "borderWidth": "2px",
      "color": "red",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Button__ButtonView
    className="ui-button ripple"
    handlers={
      Object {
        "kbActivate": [Function],
      }
    }
    hidden={false}
    id="Button-0"
    keyMap={
      Object {
        "kbActivate": "",
      }
    }
    onClick={[Function]}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "black",
        "borderColor": "green",
        "borderWidth": "2px",
        "color": "red",
      }
    }
  >
    <Button__StyledIcon
      className=""
      disabled={false}
      iconName="superpowers"
      sizing="normal"
    />
  </Button__ButtonView>
</Wrapper>
`;

exports[`Test disabling of a Button 1`] = `
<Button
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  iconName="bomb"
  iconStyle=""
  id={null}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test making a Button invisible 1`] = `
<Button
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={true}
  iconName="bomb"
  iconStyle=""
  id={null}
  kbActivate=""
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={true}
  notheme={false}
  notooltip={false}
  obj="Button"
  onClick={[MockFunction]}
  padding={null}
  ripple={true}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of Button props object 1`] = `
Object {
  "backgroundColor": null,
  "border": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "hidden": false,
  "iconName": "bomb",
  "iconStyle": "",
  "id": null,
  "kbActivate": "",
  "left": null,
  "location": "none",
  "maxHeight": null,
  "maxWidth": null,
  "minHeight": null,
  "minWidth": null,
  "noborder": false,
  "noedit": false,
  "nohover": false,
  "nopropagation": true,
  "notheme": false,
  "notooltip": false,
  "obj": "Button",
  "onClick": [Function],
  "padding": null,
  "ripple": true,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test retrieval of Button props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
}
`;
